Nuevo commit colocando primeros contenidos en index y stiles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-
-
-Hola este es mi primer achivo en inde.
-
-Adios
-
-exir
-hooalla
-
-asksksksks
-kskskssk
-kksks
-q
+<html>
+    <head>
+        <title>Pinino</title>
+        
+    </head>
+    <body>
+        <div>
+        <h1>Este es mi primir pinino</h1>
+        </div>
+    </body>
+</html>
